--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App{
+  justify-content: center;
+  text-align: center;
+  background-color: #61dafb;
+  margin: 0 auto;
+  /* width: 80%; */
+}
