--- a/src/App.css
+++ b/src/App.css
@@ -37,14 +37,11 @@
 }
 
 img {
-  width: 100%;
-  width: 800px;
-  height: 520px;
-  border: 15px yellowgreen groove;
+  max-width: 60%;
+  height: auto;
+  border: 25px yellowgreen ridge;
   object-fit: cover;
-  /* padding: -10px; */
   margin-bottom: 30px;
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
 ul {
@@ -63,7 +60,8 @@ li {
   align-items: flex-start;
   justify-content: center;
   padding: 10px ;
-  border-radius: 10px;
+  border-radius: 50% 20% / 10% 40%;
+  /* border-radius: 10px; */
 }
 li p{
   font-style: italic;
